# gpcrpred

./: GPCRPred.hs  GPCR_Prediction_Parser.hs  gpcrpred.cabal
GPCRPred/: BlastP.hs  Format.hs  GPCRHMM.hs  Phobius.hs  PredCouple.hs  QueryPredCouple.hs  TMHMM.hs  Types.hs  Util.hs
Mains/: GsInteractorsManager.hs
python/: fastasplitter.py  parser_xml.py
test/: gpcrpred.hs
